--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,28 @@
-/* body {background-color: #eaf6f6; */
-
-hr {
-  background-color: #eaf6f6;
-  border-style: none;
-  border-top-style: dotted;
-  border-width: 6px;
-  border-color: grey;
-  width: 2.5%
-  }
-
   h1 {  font-size: 1rem;}
+
+  h2 {
+    margin-top: 0;
+    font-family: 'Roboto', sans-serif;
+    font-size: 2.5rem;
+    color: #66BFBF;
+    padding-bottom: 10px;
+    text-align: center;
+  }
 
   h3 {
     color: #66bfbf;
     /* margin-top: 0; */
   }
 
+  hr {
+    background-color: #eaf6f6;
+    border-style: none;
+    border-top-style: dotted;
+    border-width: 6px;
+    border-color: grey;
+    width: 2.5%
+    }
+    
   /* Dropdown Button */
   .dropbtn {
     background-color: #3498DB;
@@ -62,7 +69,7 @@ hr {
   .show {display:block;}
 
 /* Checkboxes */
-  /* Customize the label (the container) */
+/* Customize the label (the container) */
 .checkbox-container {
   display: block;
   position: relative;
@@ -198,6 +205,23 @@ hr {
 }
 
 /* class selectors */
+.btn {
+  background: #11CDD4;
+  background-image: -webkit-linear-gradient(top, #11CDD4, #11999E);
+  background-image: -moz-linear-gradient(top, #11CDD4, #11999E);
+  background-image: -ms-linear-gradient(top, #11CDD4, #11999E);
+  background-image: -o-linear-gradient(top, #11CDD4, #11999E);
+  background-image: linear-gradient(to bottom, #11CDD4, #11999E);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: 'Montserrat', sans-serif;
+  color: #ffffff;
+  font-size: 13px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
 .circular { border-radius: 10%;}
 .code-img-left {
   float: left;
@@ -208,6 +232,11 @@ hr {
   width: 25%;
   float: right;
   margin-left: 30px;
+}
+
+.contact-message {
+  width: 40%;
+  margin: 40px auto 30px;
 }
 
 .text-cleared-left {
