Restyle margins, radio buttons and check boxes

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,6 @@
-  h1 {  font-size: 1rem;}
+body {margin-left: 30px;
+  margin-right: 30px;}
+h1 {  font-size: 1rem;}
 
   h2 {
     margin-top: 0;
@@ -11,7 +13,7 @@
 
   h3 {
     color: #66bfbf;
-    /* margin-top: 0; */
+    font-size: 1.2rem;
   }
 
   hr {
@@ -77,7 +79,7 @@
   padding-left: 35px;
   margin-bottom: 12px;
   cursor: pointer;
-  font-size: 22px;
+  font-size: 15px;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -96,8 +98,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  height: 25px;
-  width: 25px;
+  height: 15px;
+  width: 15px;
   background-color: #ccc;
 }
 /* On mouse-over, add a grey background color */
@@ -120,10 +122,10 @@
 }
 /* Style the checkmark/indicator */
 .checkbox-container .checkbox-checkmark:after {
-  left: 9px;
-  top: 5px;
-  width: 5px;
-  height: 10px;
+  left: 5px;
+  top: 1px;
+  width: 7px;
+  height: 12px;
   border: solid white;
   border-width: 0 3px 3px 0;
   -webkit-transform: rotate(45deg);
@@ -139,7 +141,7 @@
   padding-left: 35px;
   margin-bottom: 12px;
   cursor: pointer;
-  font-size: 22px;
+  font-size: 15px;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -158,8 +160,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  height: 25px;
-  width: 25px;
+  height: 15px;
+  width: 15px;
   background-color: #ccc;
   border-radius: 50%;
 }
