--- a/css/styles.css
+++ b/css/styles.css
@@ -1,75 +1,168 @@
-body {margin-left: 30px;
-  margin-right: 30px;}
+body {
+  background-color: white;
+  /* display: block; */
+  margin: 0;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+div {
+  background-color: white;
+  /* margin-top: 0px; */
+}
 h1 {  font-size: 1rem;}
+h2 {
+  margin-top: 0;
+  font-family: 'Roboto', sans-serif;
+  font-size: 2rem;
+  color: #66BFBF;
+  padding-bottom: 10px;
+  text-align: center;
+}
+h3 {
+  color: #66bfbf;
+  font-size: 1.2rem;
+}
+hr {
+  background-color: #eaf6f6;
+  border-style: none;
+  border-top-style: dotted;
+  border-width: 6px;
+  border-color: grey;
+  width: 2.5%
+}
+/* img {width: 15%} */
+  
+/* class selectors */
+.btn {
+  background: #11CDD4;
+  background-image: -webkit-linear-gradient(top, #11CDD4, #11999E);
+  background-image: -moz-linear-gradient(top, #11CDD4, #11999E);
+  background-image: -ms-linear-gradient(top, #11CDD4, #11999E);
+  background-image: -o-linear-gradient(top, #11CDD4, #11999E);
+  background-image: linear-gradient(to bottom, #11CDD4, #11999E);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: 'Montserrat', sans-serif;
+  color: #ffffff;
+  font-size: 13px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
 
-  h2 {
-    margin-top: 0;
-    font-family: 'Roboto', sans-serif;
-    font-size: 2rem;
-    color: #66BFBF;
-    padding-bottom: 10px;
-    text-align: center;
-  }
+.circular { border-radius: 10%;}
 
-  h3 {
-    color: #66bfbf;
-    font-size: 1.2rem;
-  }
+.code-img-left {
+  float: left;
+  margin-right: 30px;
+}
 
-  hr {
-    background-color: #eaf6f6;
-    border-style: none;
-    border-top-style: dotted;
-    border-width: 6px;
-    border-color: grey;
-    width: 2.5%
-    }
-    
-  /* Dropdown Button */
-  .dropbtn {
-    background-color: #3498DB;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-  }
+.code-img-right {
+  width: 25%;
+  float: right;
+  margin-left: 30px;
+}
 
-  /* Dropdown button on hover & focus */
-  .dropbtn:hover, .dropbtn:focus {
-    background-color: #2980B9;
-  }
+.contact {
+  /* border: solid; */
+  position: relative;
+    bottom: 635px;
+}
 
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
+.contact-message {
+  width: 40%;
+  margin: 10px auto 20px;
+}
 
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
+/* Dropdown Button */
+.dropbtn {
+  background-color: #3498DB;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #2980B9;
+}
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd}
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
 
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
+.horizontal {
+  /* border: solid; */
+  position: relative;
+    bottom: 650px;
+  /* margin: 10px;
+  margin-left: 800px;
+  
+    left: 20px;
+  width: 33%; */
+}
 
-  /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #ddd}
+.img-parabank {
+  position: relative;
+    bottom: 18px;
+    left: 50px;
+}
 
-  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-  .show {display:block;}
+.parabank {
+  /* border: solid; */
+  /* height: 400px;   */
+  margin: 10px;
+  margin-left: 800px;
+  position: relative;
+    bottom: 605px;
+    left: 20px;
+  width: 33%;
+}
 
+.rollercoaster {
+  /* border: solid; */
+  margin: 10px;
+  width: 33%;
+}
+
+.servicebeurt {
+  /* border: solid; */
+  margin: 10px;
+  margin-left: 400px;
+  position: relative;
+  bottom: 150px;
+  width: 33%;
+}
+
+.text-cleared-left {
+  clear: left;
+}
+
+.text-cleared-right {
+  clear: right;
+}
 
 /* Checkboxes */
 /* Customize the label (the container) */
@@ -191,48 +284,4 @@ h1 {  font-size: 1rem;}
   height: 8px;
   border-radius: 50%;
   background: white;
-}
-
-/* class selectors */
-.btn {
-  background: #11CDD4;
-  background-image: -webkit-linear-gradient(top, #11CDD4, #11999E);
-  background-image: -moz-linear-gradient(top, #11CDD4, #11999E);
-  background-image: -ms-linear-gradient(top, #11CDD4, #11999E);
-  background-image: -o-linear-gradient(top, #11CDD4, #11999E);
-  background-image: linear-gradient(to bottom, #11CDD4, #11999E);
-  -webkit-border-radius: 28;
-  -moz-border-radius: 28;
-  border-radius: 28px;
-  font-family: 'Montserrat', sans-serif;
-  color: #ffffff;
-  font-size: 13px;
-  padding: 10px 20px 10px 20px;
-  text-decoration: none;
-}
-
-.circular { border-radius: 10%;}
-
-.code-img-left {
-  float: left;
-  margin-right: 30px;
-}
-
-.code-img-right {
-  width: 25%;
-  float: right;
-  margin-left: 30px;
-}
-
-.contact-message {
-  width: 40%;
-  margin: 10px auto 20px;
-}
-
-.text-cleared-left {
-  clear: left;
-}
-
-.text-cleared-right {
-  clear: right;
 }
