Added images to the web pages

--- a/css/styles.css
+++ b/css/styles.css
@@ -76,22 +76,19 @@ hr {
 
 /* Dropdown Button */
 .dropbtn {
-  background-color: #3498DB;
+  background-color: #11CDD4;
   color: white;
   padding: 16px;
   font-size: 16px;
   border: none;
-  cursor: pointer;
 }
-/* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
-  background-color: #2980B9;
-}
+
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
   position: relative;
   display: inline-block;
 }
+
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
   display: none;
@@ -101,6 +98,7 @@ hr {
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
+
 /* Links inside the dropdown */
 .dropdown-content a {
   color: black;
@@ -108,10 +106,18 @@ hr {
   text-decoration: none;
   display: block;
 }
+
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd}
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
+
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;}
+/* .show {display:block;} */
 
 .horizontal {
   /* border: solid; */
@@ -128,6 +134,11 @@ hr {
   position: relative;
     bottom: 18px;
     left: 50px;
+}
+
+.img-garage {
+  position: relative;
+    left: 220px;
 }
 
 .parabank {
